# Nanodisks

./: CMakeLists.txt  Constants.c  Constants.h  ExtCoeff.c  Functions.c  Functions.h  Functions.py  GeneralFunctions.c  GeneralFunctions.h  I_m0.npy  I_m0.txt  I_m1.npy  I_m1.txt  Plotting.py  Tests.c  main.c
Data/: CD___N100m0cutoff100EF1_00omega0_20gamma0_02radius25_00.txt  EVal_N100m0cutoff100EF1_00omega0_20gamma0_02radius25_00.txt  EVal_N600m0cutoff100EF1_00omega0_20gamma0_02radius25_00.txt  EVal_N600m1cutoff100EF1_00omega0_20gamma0_02radius25_00.txt  EVec_N100m0cutoff100EF1_00omega0_20gamma0_02radius25_00.txt
DataEC/: ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T0_00op2q0.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T0_00op2q0_10.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T0_00op2q0_20.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T0_00op2q0_50.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T0_10op2.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T1500_00op2.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T3000_00op2.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T300_00op0.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T300_00op1.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T300_00op2.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T500_00op0.txt  ExtCoeff_N100m1cutoff100EF1_00omega_S0_22omega_E0_28gamma0_02radius50_00steps400T500_00op2.txt  (+24 more)
(+6 files in other folders)
